Bulk commit after upstream sync